--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-EL8KYP4VYE');
+  gtag('config', 'G-EL8KYP4VYE', { 'debug_mode':true });
 </script>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Shoply — Products</title>
