--- a/cart.html
+++ b/cart.html
@@ -109,7 +109,7 @@ function renderSummary(){
       <hr style="border:none;border-top:1px solid #f1f6ff">
       <div style="display:flex;justify-content:space-between"><span>Total</span><strong>₹${total}</strong></div>
       <div style="display:flex;gap:8px;margin-top:8px">
-        <a class="btn" href="https://shoply6399.netlify.app/payment.html">Proceed to payment</a>
+        <a class="btn" href="payment.html">Proceed to payment</a>
         <button class="btn" style="background:#ef4444" onclick="clearCart()">Clear</button>
       </div>
     </div>
