--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,14 @@
   gtag('js', new Date());
 
   gtag('config', 'G-EL8KYP4VYE');
+  gtag('config', 'G-EL8KYP4VYE', {
+    'linker': {
+      'domains': [
+        'kss0704.github.io',
+        'shoply-eight.vercel.app'
+      ]
+    }
+  });
 </script>
  
  <!-- Google Tag Manager -->
